# cpp11blaze

./: .Rbuildignore  .Rprofile  .clang-format  .clang-format-ignore  .gitignore  00-run-benchmarks-niagara.sh  DESCRIPTION  Makefile  NAMESPACE  NEWS.md  README.Rmd  README.md
dev/eigenbenchmark/inst/include/unsupported/Eigen/: AdolcForward  AlignedVector3  ArpackSupport  AutoDiff  BVH  CMakeLists.txt  EulerAngles  FFT  IterativeSolvers  KroneckerProduct  LevenbergMarquardt  MPRealSupport  MatrixFunctions  MoreVectorization  NonLinearOptimization  NumericalDiff  OpenGLSupport  Polynomials  Skyline  SparseExtra  SpecialFunctions  Splines
dev/eigenbenchmark/inst/include/unsupported/Eigen/src/AutoDiff/: AutoDiffJacobian.h  AutoDiffScalar.h  AutoDiffVector.h
dev/eigenbenchmark/inst/include/unsupported/Eigen/src/BVH/: BVAlgorithms.h  KdBVH.h
dev/eigenbenchmark/inst/include/unsupported/Eigen/src/Eigenvalues/: ArpackSelfAdjointEigenSolver.h
dev/eigenbenchmark/inst/include/unsupported/Eigen/src/EulerAngles/: CMakeLists.txt  EulerAngles.h  EulerSystem.h
dev/eigenbenchmark/inst/include/unsupported/Eigen/src/FFT/: ei_fftw_impl.h  ei_kissfft_impl.h
dev/eigenbenchmark/inst/include/unsupported/Eigen/src/IterativeSolvers/: ConstrainedConjGrad.h  DGMRES.h  GMRES.h  IDRS.h  IncompleteLU.h  IterationController.h  MINRES.h  Scaling.h
dev/eigenbenchmark/inst/include/unsupported/Eigen/src/KroneckerProduct/: KroneckerTensorProduct.h
dev/eigenbenchmark/inst/include/unsupported/Eigen/src/LevenbergMarquardt/: CopyrightMINPACK.txt  LMcovar.h  LMonestep.h  LMpar.h  LMqrsolv.h  (+1 more)
(+2897 files in other folders)
